--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
                     Los blogs son la mejor forma de compartir información y tus ideas.
                     Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                     Pero estadísticamente no lo eres... Por ahora!!</p>
-                <p> Suscribete y dale like.</p>
+                <p> Suscribete y dale like. Aún no sube a github</p>
             </div>
         </div>
     </body>
