--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>Bienvenido a Hyperblog</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
@@ -18,7 +18,7 @@
                     Los blogs son la mejor forma de compartir información y tus ideas.
                     Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                     Pero estadísticamente no lo eres... Por ahora!!</p>
-                <p> Suscribete y dale like. Aún no sube a github</p>
+                <p> Suscribete y dale like.</p>
             </div>
         </div>
     </body>
