--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,9 @@
                     Pero estadísticamente no lo eres... Por ahora!!</p>
                 <p> Suscribete y dale like.</p>
             </div>
+            <div id="footer">
+                Hecho con amor en Platzi
+            </div>
         </div>
     </body>
 </html>
